# effective-mobile-junior

./: .env.example  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
src/apps/ads/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/ads/api/: filters.py  permissions.py  serializers.py  urls.py  views.py
src/apps/ads/services/: proposals.py  queries.py
src/apps/ads/templates/ads/: ad_detail.html  ad_form.html  ad_list.html  proposal_form.html  proposal_list.html
src/apps/ads/tests/: test_main.py
src/apps/users/: views.py
src/config/: urls.py
src/config/settings/: __init__.py  base.py  dev.py
src/static/css/: main.css
src/static/js/: main.js
src/templates/: base.html
src/templates/includes/: messages.html  navbar.html
src/templates/registration/: login.html  signup.html
